corrected overlay portfolio and z-index

--- a/css/style.css
+++ b/css/style.css
@@ -274,6 +274,7 @@ p {
   background-color: var(--white-text-color);
 
   transform: translate(-50%, -50%) scale(1);
+  z-index: 2;
 }
 
 .closed {
@@ -357,11 +358,12 @@ p {
 
 .thumb {
   position: relative;
+  z-index: -1;
 }
 
 .label {
   position: absolute;
-  top: 224px;
+  bottom: 0;
   margin: 0;
 
   width: 100%;
@@ -460,10 +462,17 @@ p {
 .clients-logo {
   display: flex;
   align-items: center;
-  justify-content: space-between;
+}
+
+.clients-logo li {
+  width: calc((100% - 150px) / 6);
+  margin-right: 30px;
+}
+
+.clients-logo li:nth-child(6n) {
+  margin-right: 0;
 }
 .client-list {
-  width: 170px;
   height: 92px;
   color: var(--main-social-color);
   fill: currentColor;
@@ -500,10 +509,10 @@ p {
   flex-direction: column;
 
   align-items: flex-start;
+  margin-right: 70px;
 }
 .footer-address li {
   margin-bottom: 9px;
-  margin-right: 70px;
 }
 
 .logo-accent {
@@ -539,8 +548,8 @@ p {
 }
 .container-footer {
   display: flex;
-  align-items: center;
 }
+
 .footer-list {
   display: flex;
 
@@ -684,7 +693,6 @@ p {
   margin: -1px;
 }
 .projects {
-  position: relative;
   text-decoration: none;
   display: block;
 
@@ -693,31 +701,39 @@ p {
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.project-overlay {
-  position: absolute;
-
-  width: 100%;
-  height: 100%;
-  background-color: rgba(33, 150, 243, 0.9);
-
-  transform: translateY(0);
-  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.project-thumb {
-  display: block;
-
-  overflow: hidden;
-}
-
-.project-thumb:hover .project-overlay {
-  transform: translateY(-100%);
-}
-
 .projects:hover,
 .projects:focus {
   box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
     1px 4px 6px rgba(0, 0, 0, 0.16);
+}
+
+.project-thumb {
+  position: relative;
+  overflow: hidden;
+}
+
+.project-overlay {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+  background-color: rgba(33, 150, 243, 0.9);
+
+  opacity: 0;
+  transform: translateY(100%);
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.projects:hover .project-overlay,
+.projects:focus .project-overlay {
+  transform: translateY(0);
+  opacity: 1;
 }
 
 .overlay-text {
@@ -726,8 +742,8 @@ p {
   font-size: 18px;
   line-height: 1.55;
   letter-spacing: 0.03em;
-
-  padding: 63px 24px;
+  padding-left: 24px;
+  padding-right: 24px;
 
   color: var(--white-text-color);
 }
